--- a/css/tyyli.scss
+++ b/css/tyyli.scss
@@ -1,15 +1,14 @@
 $transition-time: 0.3s;
 $bg-color: #ffffff;
-$prim-purple: #bb86fc;
-$prim-green: #03dac5;
+
 $prim-tc: #18447e;
-$prim-red: #ff0266;
+
 $color: #2f2828;
 $prim-tumma: #2f2828;
 @mixin varjo-koholla {
 	border-radius: 37px;
 	background: #18447e;
-	box-shadow: 23px 23px 45px #6a6a6b, -23px -23px 45px #afb9c5;
+	box-shadow: 12px 12px 20px 5px rgb(207, 206, 206);
 	h2,
 	h4 {
 		color: white;
@@ -18,23 +17,23 @@ $prim-tumma: #2f2828;
 		color: white;
 	}
 }
-@mixin varjo-koholla-tumma {
-	border-radius: 20px;
-	background: #2f2828;
-	box-shadow: 27px 27px 54px #262020, -27px -27px 54px #fdf7f7;
+
+@mixin vaalea-varjo-koholla {
+	border-radius: 16px;
+	background: #ffffff;
+	box-shadow: 13px 13px 26px #dedede, -13px -13px 26px #ffffff, 2px 2px 7px #6a6a6b;
 }
 
 @mixin varjo-painunut {
-	border-radius: 20px;
-	background: $prim-tc;
-	box-shadow: inset 10px 10px 30px #054394, inset -10px -10px 30px #0755bb;
-	color: white;
+	border-radius: 10px;
+	background: #18447e;
+	box-shadow: inset 2px 3px 12px #082f66;
 }
 
-@mixin varjo-painunut-tumma {
-	border-radius: 20px;
-	background: #2f2828;
-	box-shadow: inset 20px 20px 60px #282222, inset -20px -20px 60px #362e2e;
+@mixin vaalea-varjo-painunut {
+	border-radius: 5px;
+	background: #ffffff;
+	box-shadow: inset 13px 13px 26px #dedede, inset -13px -13px 26px #ffffff;
 }
 
 * {
@@ -59,9 +58,6 @@ body {
 	}
 	img {
 		width: 70%;
-	}
-	button {
-		background: $prim-purple;
 	}
 
 	.dropdown-menu {
@@ -89,103 +85,8 @@ a {
 		top: 0;
 		left: 0;
 	}
-
-	/* height: 100vh;
-	position: relative;
-	background: url(/img/luotettu2.jpg);
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover; */
-}
-/* .landing::after {
-	content: "";
-	background: url(/img/luotettu2.jpg);
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: 60%;
-	opacity: 0.3;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	position: absolute;
-	z-index: 1;
-} */
-
-header {
-	height: 8vh;
-	display: flex;
-	justify-content: space-between;
-	flex-direction: row;
-	align-items: center;
-	margin-bottom: 10vh;
-	background-position: center;
-	background-repeat: no-repeat;
-
-	background: #e3f2fd;
-	box-shadow: 27px 27px 54px #8a949a, -27px -27px 54px #ffffff;
-
-	img {
-		width: 50px;
-		margin: 30px;
-	}
-	h5 {
-		font-size: clamp(1rem, 2vw, 2rem);
-		font-weight: 700;
-	}
-	#mode {
-		margin-right: 40px;
-		padding: 20px;
-		border-radius: 50%;
-		background-color: $prim-purple;
-	}
 }
 
-/* kytkin */
-.label {
-	display: inline-flex;
-	align-items: center;
-	cursor: pointer;
-	color: #394a56;
-}
-
-.label-text {
-	margin-right: 16px;
-}
-
-.toggle {
-	isolation: isolate;
-	position: relative;
-	height: 30px;
-	width: 60px;
-	margin-right: 20px;
-	border-radius: 15px;
-	overflow: hidden;
-	box-shadow: -8px -4px 8px 0px #ffffff, 8px 4px 12px 0px #d1d9e6, 4px 4px 4px 0px #d1d9e6 inset,
-		-4px -4px 4px 0px #ffffff inset;
-}
-
-.toggle-state {
-	display: none;
-}
-
-.indicator {
-	height: 100%;
-	width: 200%;
-	background: $prim-green;
-	border-radius: 15px;
-	transform: translate3d(-75%, 0, 0);
-	transition: transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35);
-	box-shadow: -2px -2px 8px 0px #039485, 4px 4px 12px 0px #029687;
-}
-
-.toggle-state:checked ~ .indicator {
-	transform: translate3d(25%, 0, 0);
-}
-/* animaatiot  ja alku tekstit*/
-.container2 {
-	height: 80hv;
-}
 .selitys {
 	position: absolute;
 	bottom: 40vh;
@@ -203,12 +104,7 @@ header {
 		}
 	}
 }
-.scene,
-canvas {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-}
+
 /* buttonit */
 .btn {
 	border-radius: 500px;
@@ -216,7 +112,7 @@ canvas {
 	color: white;
 }
 .perus {
-	padding: 5px 40px;
+	padding: 5px 60px;
 }
 
 .btn-group {
@@ -225,6 +121,7 @@ canvas {
 	bottom: 0;
 	left: 0;
 	right: 0;
+	margin-bottom: 60px;
 	img {
 		width: 25px;
 	}
@@ -248,7 +145,7 @@ canvas {
 }
 /* sectionit alkaa */
 section {
-	margin-top: 60px;
+	margin-top: 10px;
 	margin-left: 20px;
 	margin-right: 20px;
 	h4,
@@ -271,97 +168,112 @@ section {
 	}
 	#palvelumme {
 		@include varjo-koholla();
-		border-radius: 20px;
-		img {
-			max-width: 70%;
-		}
-	}
-
-	#lupauksemme {
-		@include varjo-koholla();
-		padding: 2rem;
-	}
-	#yhteystiedot {
-		img {
-			max-width: 70%;
-		}
-		p {
-			line-height: 0;
-		}
-	}
-	form {
-		display: inline-block;
-		height: 500px;
-		background-color: $prim-tc;
-		padding: 10px 40px;
 		border-radius: 10px;
 	}
-	.field {
-		padding-top: 10px;
+	picture {
+		margin: 1rem;
 		display: flex;
-		flex-direction: column;
-		label {
-			padding-left: 5px;
-			transition: all 0.3s ease-in;
-			transform: translateY(-28px);
-			pointer-events: none;
-			opacity: 0.83;
-		}
-		input,
-		textarea {
-			border-radius: 5px;
-			border: none;
-		}
-		input:focus {
-			border-bottom: 2px solid black;
-		}
-		input:focus + label {
-			transform: translateY(-1px);
-			color: white;
-			transform: scale(1.4);
-			opacity: 1;
-		}
-		textarea:focus,
-		input:focus {
-			outline: none;
-		}
-		textarea:focus + label {
-			color: white;
-			transform: translateY(-270px);
-			transform: scale(1.4);
-			opacity: 1;
-		}
+		justify-content: center;
+		align-items: center;
 	}
+	img {
+		max-width: 70%;
+	}
+}
 
-	#tarinamme {
-		margin: 20px;
-		h1 {
-			text-transform: uppercase;
-			font-weight: 700;
-		}
+#lupauksemme {
+	@include varjo-koholla();
+	padding: 2rem;
+}
+#yhteystiedot {
+	h4 {
+		margin-bottom: 0;
 	}
-	#tiimi {
+	img {
+		max-width: 70%;
+	}
+	p {
 		line-height: 0;
-		#hallinto {
-			margin-top: 10px;
-			margin-bottom: 10px;
-		}
-		#myynti {
-			margin-top: 10px;
-			margin-bottom: 10px;
-		}
-		h2,
-		h4 {
-			text-transform: uppercase;
-			font-weight: 700;
-		}
-		i {
-			font-size: 3rem;
-			margin-bottom: 10px;
-		}
-		hr {
-			height: 5px;
-		}
+	}
+}
+form {
+	display: inline-block;
+	height: 550px;
+	@include vaalea-varjo-koholla();
+	padding: 10px 10px;
+	border-radius: 10px;
+}
+.field {
+	padding-top: 10px;
+	display: flex;
+	flex-direction: column;
+	label {
+		padding-left: 5px;
+		transition: all 0.3s ease-in;
+		transform: translateY(-28px);
+		pointer-events: none;
+		opacity: 0.5;
+	}
+	input,
+	textarea {
+		padding: 5px;
+		border: none;
+		@include vaalea-varjo-painunut();
+	}
+	input:focus {
+		border-bottom: 2px solid black;
+	}
+	input:focus + label {
+		transform: translateY(-1px);
+
+		transform: scale(1.4);
+		opacity: 1;
+	}
+	textarea:focus,
+	input:focus {
+		outline: none;
+	}
+	textarea:focus + label {
+		transform: translateY(-270px);
+		transform: scale(1.4);
+		opacity: 1;
+	}
+}
+
+#tarinamme {
+	.btn {
+		z-index: 3;
+	}
+	h1 {
+		text-transform: uppercase;
+		font-weight: 700;
+	}
+}
+.shake {
+	width: 70%;
+}
+#tiimi {
+	line-height: 0;
+	#hallinto {
+		margin-top: 10px;
+		margin-bottom: 10px;
+	}
+	#myynti {
+		margin-top: 10px;
+		margin-bottom: 10px;
+	}
+	h2,
+	h4 {
+		text-transform: uppercase;
+		font-weight: 700;
+	}
+	i {
+		color: $prim-tc;
+		font-size: 3rem;
+		margin-bottom: 10px;
+	}
+	hr {
+		height: 5px;
 	}
 }
 
@@ -371,6 +283,7 @@ footer {
 	margin-bottom: 120px;
 	@include varjo-painunut();
 	padding: 10px;
+	color: white;
 	h3,
 	h5 {
 		font-weight: 700;
@@ -453,10 +366,9 @@ footer.tumma {
 
 	#palvelumme {
 		height: 100%;
-		padding: 50px;
+
 		img {
 			width: 100%;
-			margin-top: 20%;
 		}
 		/* 	p {
 			margin-left: 20px;
@@ -483,8 +395,6 @@ footer.tumma {
 			height: 30px; /* fixed header height*/
 			margin: -30px 0 0; /* negative fixed header height */
 		}
-		margin-left: 200px;
-		margin-right: 200px;
 	}
 	#yhteystiedot {
 		&::before {
@@ -500,8 +410,9 @@ footer.tumma {
 			margin: 30px;
 		}
 	}
+
 	#tarinamme {
-		margin: 80px;
+		@include vaalea-varjo-koholla();
 		img {
 			width: auto;
 			height: 80%;
